[package]
name = "nsfu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
hyper = "0.14"
thiserror = "1.0"
ring = "0.16"
sha2 = "0.9"
hex = "0.4"
